# ghost-edr

./: .gitignore  README.md
.claude/: settings.local.json
config/: ghost-edr.example.yaml  ghost-edr.yaml
enforcer/: Dockerfile  pyproject.toml
enforcer/src/ghost_enforcer/: __init__.py  __main__.py  alert_parser.py  cli.py  config.py  daemon.py  policy_engine.py
enforcer/src/ghost_enforcer/actions/: __init__.py  alert.py  base.py  kill.py  quarantine.py  webhook.py
enforcer/src/ghost_enforcer/receivers/: __init__.py
enforcer/src/ghost_enforcer/runtime/: __init__.py  base.py  detector.py  docker_desktop.py  orbstack.py
enforcer/src/ghost_enforcer/utils/: __init__.py  logging.py
enforcer/tests/: __init__.py
enforcer/tests/fixtures/: sample_alerts.json
mole/: benchmark.sh  docker-compose.yml
mole/config/: falco.yaml
mole/config/rules/: ghost_rules.yaml
scripts/: install.sh  start.sh  status.sh  stop.sh
